--- a/validation-options.yaml
+++ b/validation-options.yaml
@@ -21,6 +21,9 @@ pylint:
     # Allow two letter attributes
     attr-rgx=.*$
 
+    # Allow module level lowercase variables
+    const-rgx=(([a-zA-Z_][a-zA-Z0-9_]*)|(__.*__))$
+
     [FORMAT]
     max-line-length=250
 
