Linting to victory

--- a/validation-files.yaml
+++ b/validation-files.yaml
@@ -1,6 +1,6 @@
 # Don't match hidden dotted files/folders
 # Don't match generated folders
-# Don't match test data (which needs to be bad)
+# Don't match test data (which is bad intentionally)
 all: | 
   *
   !RE:.*\/\..*|^\..*
@@ -9,6 +9,7 @@ all: |
   !**/__pycache__
   !*.egg-info
   !tests/validators
+  !tests/test-installation-environment
 
 # Sphinx generated conf.py does not pass pylint validation.
 # https://bitbucket.org/birkenfeld/sphinx/issue/909/generated-default-confpy-does-not-pass
