--- a/validation-options.yaml
+++ b/validation-options.yaml
@@ -43,4 +43,6 @@ pylint:
     # Disable:
     # - Missing docstring
     # :C0112: *Empty docstring*
-    disable = C0111, C0112
+    # :R0903: *Too few public methods (%s/%s)*
+    # :R0904: *Too many public methods (%s/%s)*
+    disable = C0111, C0112, R0903, R0904
