Adding in pdb tests, pdb support

--- a/validation-files.yaml
+++ b/validation-files.yaml
@@ -21,4 +21,7 @@ pylint: |
   !vvv/bzrlib/*
   !scripts/expand_tabs.py
 
-
+# pdb validator has set_trace() inside strings
+pdb: |
+  *.py
+  !vvv/validators/pdb.py
