--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ python:
 # command to install dependencies
 # - because we validate ourselves this is special
 install:
-  - pip install git://github.com/miohtama/vvv.git
+  - pip install . --use-mirrors
+  - pip install docutils --use-mirrors
 
 # command to run validation + tests against the code base
 script: vvv . ; cd tests ; python -m unittest discover
