--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ install:
   - pip install docutils --use-mirrors
 
 # command to run validation + tests against the code base
-script: vvv . ; cd tests ; python -m unittest discover
+script: vvv .
