--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ install:
   - pip install docutils --use-mirrors
 
 # command to run validation + tests against the code base
-script: vvv .
+script: vvv . ; cd tests ; python -m unittest discover
