--- a/validation-options.yaml
+++ b/validation-options.yaml
@@ -37,6 +37,9 @@ pylint:
     # Maximum number of attributes for a class (see R0902).
     max-attributes=25
 
+    # Maximum number of locals for function / method body
+    max-locals=25
+
     [MESSAGES CONTROL]
     # Disable:
     # - Missing docstring
