--- a/docs/Makefile
+++ b/docs/Makefile
@@ -3,7 +3,9 @@
 
 # You can set these variables from the command line.
 SPHINXOPTS    =
-SPHINXBUILD   = sphinx-build
+
+# Force to use virtualenv'ed sphinx-build
+SPHINXBUILD   = ../venv/bin/sphinx-build
 PAPER         =
 BUILDDIR      = build
 
