Back to development: 0.4.2

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 recursive-include vvv *
-recursive-include ghetto *
+recursive-include ghettoci *
 recursive-include scripts *
 recursive-include docs *
 include *
