--- a/validation-options.yaml
+++ b/validation-options.yaml
@@ -49,3 +49,6 @@ pylint:
     # The following conflicts with PEP-8:
     # :C0322:156,0:main: Operator not preceded by a space
     disable = C0111, C0112, R0903, R0904, C0322
+
+pep8:
+    command-line: --ignore E501
